# ogre

./: .gitignore  CLAUDE.md  Cargo.toml  dev.sh
.claude/roles/: lead-designer.md  lead-engineer.md  qa-engineer.md  senior-engineer.md
crates/ogre-api/: Cargo.toml
crates/ogre-api/src/: lib.rs  main.rs  state.rs  types.rs
crates/ogre-api/src/handlers/: actions.rs  agents.rs  audit.rs  connectors.rs  dashboard.rs  keys.rs  mod.rs  rules.rs
crates/ogre-audit/: Cargo.toml
crates/ogre-audit/src/: entry.rs  file_log.rs  hash_chain.rs  lib.rs
crates/ogre-audit/tests/: audit_tests.rs
crates/ogre-connector-sqlite/: Cargo.toml
crates/ogre-connector-sqlite/src/: classifier.rs  connector.rs  lib.rs  sanitizer.rs
crates/ogre-connector-sqlite/tests/: integration_tests.rs
crates/ogre-core/: Cargo.toml
crates/ogre-core/src/: action.rs  capability.rs  connector.rs  error.rs  ids.rs  lib.rs
crates/ogre-crypto/: Cargo.toml
crates/ogre-crypto/src/: keys.rs  lib.rs  signature.rs  signed_request.rs  verification.rs
crates/ogre-crypto/tests/: signature_tests.rs
crates/ogre-crypto/tests/compile_fail/: agent_approved_not_fully_approved.rs  agent_approved_not_fully_approved.stderr  ogre_signed_not_fully_approved.rs  ogre_signed_not_fully_approved.stderr  unsigned_not_agent_approved.rs  unsigned_not_agent_approved.stderr
crates/ogre-proxy/: Cargo.toml
crates/ogre-proxy/src/: lib.rs  nonce.rs  pending.rs  proxy.rs
crates/ogre-proxy/tests/: integration_tests.rs
crates/ogre-rules/: Cargo.toml
crates/ogre-rules/src/: condition.rs  engine.rs  lib.rs  rule.rs
crates/ogre-rules/tests/: rules_tests.rs
web/: package-lock.json  vite.config.ts
web/src/: App.tsx  api.ts
web/src/views/: Agents.tsx  AuditLog.tsx  Connectors.tsx  Dashboard.tsx  Keys.tsx  PendingApprovals.tsx  Rules.tsx
