[workspace]
resolver = "2"
members = [
    "crates/ogre-core",
    "crates/ogre-crypto",
    "crates/ogre-audit",
    "crates/ogre-rules",
    "crates/ogre-proxy",
    "crates/ogre-connector-sqlite",
    "crates/ogre-api",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Internal crates
ogre-core = { path = "crates/ogre-core" }
ogre-crypto = { path = "crates/ogre-crypto" }
ogre-audit = { path = "crates/ogre-audit" }
ogre-rules = { path = "crates/ogre-rules" }
ogre-proxy = { path = "crates/ogre-proxy" }
ogre-connector-sqlite = { path = "crates/ogre-connector-sqlite" }
ogre-api = { path = "crates/ogre-api" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
rand = "0.8"
sha2 = "0.10"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async
tokio = { version = "1", features = ["full"] }

# Web
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
sqlparser = { version = "0.44", features = ["serde"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1"

# Unique IDs
uuid = { version = "1", features = ["v4", "serde"] }
