[package]
name = "ogre-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Immutable audit log for the OGRE protocol"

[dependencies]
ogre-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
