[package]
name = "ogre-connector-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQLite connector for the OGRE protocol"

[dependencies]
ogre-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlparser = { workspace = true }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
ogre-core = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
