[package]
name = "ogre-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types, traits, and errors for the OGRE protocol"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
