[package]
name = "ogre-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cryptographic signing and verification for the OGRE protocol"

[dependencies]
ogre-core = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
rand = { workspace = true }
trybuild = "1"
